examples/test/testpolicy17401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17401
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key37: value20
      key0: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value20
      podSelector:
        matchLabels:
          key35: value40
          key28: value33
